--- a/Code/app/src/main/res/values/themes.xml
+++ b/Code/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
 <resources>
 
-    <style name="Theme.MyApplication" parent="@style/Theme.Leanback" />
+    <style name="Theme.Ceidflix" parent="@style/Theme.Leanback" />
 </resources>
