--- a/CeidFlix/Ceidflix/src/main/resources/com/example/ceidflix/successfulSignUp.fxml
+++ b/CeidFlix/Ceidflix/src/main/resources/com/example/ceidflix/successfulSignUp.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -19,5 +20,6 @@
          </font>
       </Text>
       <Button fx:id="toProfile" layoutX="241.0" layoutY="224.0" mnemonicParsing="false" onAction="#onSuccessfulLoginButtonClick" prefHeight="25.0" prefWidth="117.0" text="Go to profile" />
+      <Label fx:id="userNameLabel" layoutX="286.0" layoutY="267.0" text="Label" />
    </AnchorPane>
 </VBox>
